# storage/api-docs/api-docs.json
@@ -756,6 +756,42 @@
                     }
                 }
             }
+        },
+        "/api/v1/master-data-cctv/": {
+            "get": {
+                "tags": [
+                    "Master Data CCTV"
+                ],
+                "summary": "Cari Master Data CCTV",
+                "description": "Cari data cctv",
+                "operationId": "Cari Master Data CCTV",
+                "parameters": [
+                    {
+                        "name": "cari",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     }
 }
